[package]
name = "glucose-tracker"
version = "0.1.0"
edition = "2021"

[features]
default = ["gui"]
gui = ["dep:eframe", "dep:egui_plot", "dep:rfd"]

[lib]
name = "glucose_tracker"
path = "src/lib.rs"

[[bin]]
name = "glucose-tracker"
path = "src/main.rs"
required-features = ["gui"]

[[bin]]
name = "glucose-tracker-mcp"
path = "src/bin/mcp.rs"

[dependencies]
eframe = { version = "0.31", optional = true }
egui_plot = { version = "0.31", optional = true }
rfd = { version = "0.15", optional = true }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
image = "0.25"
printpdf = "0.8"
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
plotters = { version = "0.3", default-features = false, features = ["line_series"] }
plotters-bitmap = { version = "0.3", default-features = false }
serde = { version = "1", features = ["derive"] }
schemars = "0.8"
